--- a/calculator-app-fixed/src/App.css
+++ b/calculator-app-fixed/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  background: radial-gradient(ellipse at 50% 50%, rgba(210, 26, 26, 1) 0%, rgba(130, 130, 130, 1) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
-.App-link {
-  color: #61dafb;
+.App{
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.calc-wrapper {
+  background-color: black;
+  width: 400px;
+  border-radius: 16px;
+  border: 5px solid #00abf0; /* Adjust the border width as needed */
+}
+
+
+.row{
+  display: flex;
+}
+
+@media (max-width: 600px) {
+  .calc-wrapper {
+    width: 100%;
   }
 }
