--- a/src/App.css
+++ b/src/App.css
@@ -30,20 +30,25 @@ body {
   display: flex;
 }
 
+
+/* For screens with a maximum width of 600px */
 @media (max-width: 600px) {
   .calc-wrapper {
     width: 100%;
   }
 }
 
-@media (max-width: 600px) and (min-width: 568px) {
+/* For screens with a minimum width of 568px and a maximum width of 600px */
+@media (min-width: 568px) and (max-width: 600px) {
   .calc-wrapper {
-    width: 25rem; 
-  }
-}
-
-@media (max-width: 568px) and (min-width:300px) {
-  .calc-wrapper{
     width: 25rem;
   }
 }
+
+/* For screens with a minimum width of 300px and a maximum width of 568px */
+@media (min-width: 300px) and (max-width: 568px) {
+  .calc-wrapper {
+    width: 25rem;
+  }
+}
+
