--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,19 @@ body {
 .calc-wrapper {
   background-color: black;
   width: 400px;
+  min-width: 300px; /* Minimum width to prevent it from becoming too small */
+
+
+   /* Media Query for smaller screens (adjust max-width as needed) */
+   @media (max-width: 768px) {
+    width: 90%; /* Adjusted width for smaller screens */
+  }
+
+  /* Media Query for even smaller screens (adjust max-width as needed) */
+  @media (max-width: 480px) {
+    width: 95%; /* Further adjusted width for even smaller screens */
+  }
+
   border-radius: 16px;
   border: 5px solid #00abf0; /* Adjust the border width as needed */
 }
@@ -31,12 +44,4 @@ body {
 }
 
 
-
-
-/* For screens with a maximum width of 600px */
-/* @media (max-width: 600px) {
-  .calc-wrapper {
-    width: 100%;
-  }
-} */
 
