--- a/src/App.css
+++ b/src/App.css
@@ -67,9 +67,8 @@ body {
 
 
 
-/* For screens with a maximum width of 600px or below */
-@media (max-width: 600px) {
+@media (max-width: 375px) {
   .calc-wrapper {
-    width: 25rem;
+    width: 25rem; /* Width for screens with a width of 375px or below */
   }
 }
