--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,9 @@ body {
   display: flex;
 }
 
+@media only screen and (max-width: 600px) {
+  .calc-wrapper {
+    max-width: none; /* Remove the maximum width on smaller screens */
+    border: 0; /* Remove the border on smaller screens */
+  }
+}
